Fixed canvas theme image path

--- a/core/themes/canvas/default.css
+++ b/core/themes/canvas/default.css
@@ -1,5 +1,5 @@
 /*--------------------------------------------------\
-| elegant       |               | default.css       |
+| canvas       |               | default.css       |
 |---------------------------------------------------|
 | For use with:                                     |
 | FrontAccounting   								|
