--- a/core/themes/default/default.css
+++ b/core/themes/default/default.css
@@ -397,13 +397,36 @@ table.tablestyle_inner td {
 
 .login {
 	width: 350px;
+	border:1px solid #ccc;
 	border-left: 12px solid #367cb5;
-	border-collapse: collapse;
 	background-color: #eeeeee;
 }
-.login td {
-	border-collapse: collapse;
-	border: 1px solid #cccccc;
+
+.login td.tableheader {
+	line-height: 40px;
+	border:1px solid #ccc;
+}
+
+.login select, .login input[type=text], input[type=password] {
+	height:25px;
+	width: 225px;
+	padding-left: 3px;
+	box-sizing: border-box;
+	border: 1px solid #bbb;
+	border-radius: 4px;
+	background-color: #fff;
+	outline: none;
+}
+
+.login input[type=button], input[type=submit] {
+  background-color: #367cb5;
+  border: none;
+  border-radius: 4px;
+  color: white;
+  padding: 8px 16px;
+  text-decoration: none;
+  margin: 4px 2px;
+  cursor: pointer;
 }
 
 .amount {
