Theme default is now RTL compatible https://github.com/FrontAccountingERP/FA/commit/2437e3ed70613410272343739883baa0a43683bd https://frontaccounting.com/punbb/viewtopic.php?pid=39601#p39601

--- a/core/themes/default/default.css
+++ b/core/themes/default/default.css
@@ -28,11 +28,11 @@ tr, td, th {
 	font-size: 11px;
 	line-height: 19px;
 }
-
+/*
 table {
 	text-align: left;
 }
-
+*/
 textarea {
 	font-size: 12px;
 }
